# Evaluation_Studio

./: .gitignore  BRD_Agentic_AI_Platform.md  BRD_Executive_Summary.md  README.md  package-lock.json  package.json  tailwind.config.ts
abl-platform/: .abl-dev-pids  .dependency-cruiser.cjs  .dockerignore  .env.example  .eslintrc.base.json  .gitattributes  .gitignore  .gitleaks.toml  .lintstagedrc.json  .mcp.json  .prettierignore  .trivyignore  AGENTS.md  Agent Platform V2 Existing Customer Compelling Narrative.md  Agent Platform V2 Existing Customer Story.md  Agent Platform V2 Intro - Existing Customer Story Compelling.pptx  Agent Platform V2 Intro - Existing Customer Story.pptx  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  DOCUMENT_UPLOAD_GUIDE.md  EMPTY-CONTENT-INVESTIGATION.md  FIX_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  SEARCHAI-DOCS-TREE.txt  TIKTOKEN_MIGRATION_PLAN.md  TODO.md  TRACE_LIFECYCLE.md  apx  commitlint.config.ts  coverage-thresholds.json  docker-compose.cluster.yml  docker-compose.gpu.yml  docker-compose.kafka-auth-test.yml  docker-compose.yml  ecosystem.config.js  helix.config.yaml  helix.verification.yaml  (+14 more)
abl-platform/.claude/: settings.json
abl-platform/.codex/: config.toml
abl-platform/.helix/: config.yaml
abl-platform/.husky/: commit-msg  post-merge  pre-commit  pre-push  pre-push.bash
abl-platform/benchmarks/: README.md  multi-tenant-saturation.ts  multi-turn-saturation.ts  package.json  tsconfig.json
abl-platform/deploy/: docker-compose.bge-m3.yml
abl-platform/docker/: restate.toml
abl-platform/docs/: 2026-03-25-architecture-fitness-remediation-backlog.md  AUTONOMOUS-DEV-FLOW.md  DIMENSION_CHANGE_FLOW.md  Kore_OpenSearch_Apr_26.md  README.md  academy-executive-summary.md  arch-ai-test-coverage.md  enterprise-readiness.md  feature-matrix.md  feature-quality-matrix.md  go-live-dashboard.html  go-live-data.js  go-live-data.json  grok-realtime-execution-plan.md  grok-realtime-s2s-implementation-context.md  helix-overview.md  kms-scoped-operations.md  (+4 more)
abl-platform/services/bge-m3-service/: .dockerignore  .gitignore  Dockerfile  GPU_CPU_CHANGES.md  README.md  app.py  pyproject.toml  setup.sh  test_app_unit.py  test_device_detection.py
abl-platform/services/docling-service/: .dockerignore  BIG_TABLE_TEXT_TO_SQL_RESEARCH.md  CHUNK_SCHEMA_MAPPING.md  DESIGN_DISCUSSION_SUMMARY.md  Dockerfile  FORMAT_SUPPORT_FINDINGS.md  FORMAT_TESTING_QUICKSTART.md  IMAGE_FILTERING.md  LANGUAGE_DETECTION_DESIGN.md  METADATA_GENERATION.md  METRICS.md  MULTI_TABLE_SEARCH_STRATEGY.md  README.md  RELATIONSHIP_GRAPH_LOGIC.md  REVISED_LARGE_FIELD_AS_DOCUMENT.md  SCHEMA_GAP_ANALYSIS.md  SETUP.md  STATUS.md  STRUCTURED_DATA_INGESTION_DESIGN.md  STRUCTURED_DATA_RESEARCH.md  TABLE_DISCOVERY_AND_ROUTING.md  TESTING.md  TEST_ALL_FORMATS.md  TWO_PHASE_INGESTION_API.md  app.py  debug_docx.py  language_detector.py  pyproject.toml  test-requirements.txt  test_all_formats.py  test_datasets.py  test_docling_direct.py  test_document_attr.py  test_document_metadata.py  test_document_pages.py  test_extraction.py  test_format_support.py  test_language_detection.py  test_quality_validation.py  test_suite.py  (+2 more)
abl-platform/services/docling-service/weights/dots-mocr/: NOTICE  README.md  chat_template.json  config.json  configuration_dots.py  generation_config.json
abl-platform/services/docling-service/weights/dots-mocr/.eval_results/: mdpbench.yaml  olmocrbench.yaml  parsebench.yaml
abl-platform/services/preprocessing-service/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  IMPROVEMENTS.md  README.md  app.py  docker-compose.yml  pyproject.toml
abl-platform/services/preprocessing-service/docs/: BENCHMARK-RESULTS.md  DATASET-IMPLEMENTATION-GUIDE.md  DATASET-RECOMMENDATIONS.md  IR-DATASETS-OVERVIEW.md  IR-DATASETS-RESEARCH.md  PHASE-3.5-3.7-SUMMARY.md  QUALITY-BENCHMARK-STATUS.md  QUALITY-TESTING-GUIDE.md  STACKOVERFLOW-QUALITY-ANALYSIS.md  SYNTHETIC-DATASET-ANALYSIS.md  TASK-TRACKING.md
abl-platform/services/preprocessing-service/scripts/: benchmark_adaptive_preprocessing.py  download_stackoverflow.py  generate_synthetic_dataset.py  generate_test_queries.py  test_failure_scenarios.py
abl-platform/services/preprocessing-service/src/: __init__.py
abl-platform/services/preprocessing-service/src/cache/: __init__.py  redis_cache.py
abl-platform/services/preprocessing-service/src/preprocessing/: __init__.py  adaptive_pipeline.py  adaptive_stages.py  entity_extractor.py  language_detector.py  models.py  pipeline.py  query_complexity.py  spell_corrector.py  synonym_expander.py
abl-platform/services/preprocessing-service/tests/: __init__.py  test_language_detector.py  test_pipeline.py  test_spell_corrector.py
abl-platform/services/preprocessing-service/tests/fixtures/: failure-scenarios.json  quality-ground-truth.json  stackoverflow-ground-truth.json  synthetic-typo-ground-truth.json  test-queries-full.json  test-queries.json
abl-platform/services/preprocessing-service/tests/quality/: README.md  requirements.txt  test_e2e_quality.py  test_retrieval_quality.py
abl-platform/services/preprocessing-service/tests/results/: benchmark-results.json  stackoverflow-quality-results.json  synthetic-quality-results.json
app/: globals.css  layout.tsx  page.tsx
components/: Sidebar.tsx  Topbar.tsx
docs/: first-time-user-guide.md
lib/: mock-data.ts  persona.ts  project-state.ts
(+11574 files in other folders)
