[project]
name = "bge-m3-service"
version = "1.0.0"
description = "BGE-M3 embedding service compatible with OpenAI embeddings API format"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "torch>=2.6.0",
    "sentence-transformers>=3.0.0",
    "flask==3.0.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
