[project]
name = "docling-service"
version = "1.0.0"
description = "Document extraction service using IBM Docling"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.27",
    "docling>=1.5.0",
    # ONNX Runtime: CPU-only in pyproject.toml — the Dockerfile overrides with
    # onnxruntime-gpu[cuda,cudnn] AFTER this install, which replaces the CPU
    # package and pulls CUDA/cuDNN pip wheels. This avoids resolver conflicts
    # between onnxruntime and onnxruntime-gpu (they share the same namespace).
    # macOS arm64 pinned to <1.24.0 (no wheels for macOS 13 arm64 after that).
    "onnxruntime>=1.17.0,<1.24.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "onnxruntime>=1.17.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "Pillow>=12.2.0",
    "pdf2image>=1.17.0",
    # Explicitly stay on the Pydantic v2 API surface used by the extraction hot path.
    "pydantic>=2.5.0,<3.0.0",
    "python-dateutil>=2.8.2",
    # LlamaIndex for text-based document extraction
    "llama-index>=0.9.0",
    "llama-index-readers-file>=0.1.0",
    # Language detection
    "lingua-language-detector>=2.0.0",
    "fasttext>=0.9.2",
    # Document metadata extraction
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.23",
    # Token counting
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[tool.uv]
# Ensure wheel-only packages like onnxruntime remain installable on our
# supported local macOS arm64 environment when uv refreshes the lockfile.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
override-dependencies = [
    "aiohttp==3.13.4",
    "banks==2.4.2",
    "lxml==6.1.0",
    "nltk==3.9.4",
    "pillow==12.2.0",
    "pypdf==6.10.1",
    "pytest==9.0.3",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.27",
    "requests==2.33.0",
    "tinytag==2.2.1",
    "transformers==5.0.0rc3",
    "urllib3==2.7.0",
]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["app.py", "test_*.py"]
