[project]
name = "preprocessing-service"
version = "1.0.0"
description = "Multilingual query preprocessing service for search-ai-runtime"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}

dependencies = [
    "flask==3.1.3",
    "gunicorn>=22.0.0",
    "redis==5.0.1",
    "langdetect==1.0.9",
    "pyspellchecker==0.7.3",
    "nltk>=3.9.4",
    "python-dateutil==2.8.2",
    "pydantic>=2.10.0",
    "python-dotenv==1.0.0",
    "prometheus-client==0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "black>=26.3.1",
    "ruff>=0.1.0",
    "mypy>=1.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
constraint-dependencies = [
    "black==26.3.1",
    "gunicorn==22.0.0",
    "nltk==3.9.4",
    "pytest==9.0.3",
    "python-dotenv==1.0.0",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
only-include = ["app.py", "src/**/*.py"]
